nav bar bug fix for mobile, smooth scroll on ios

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,6 +66,9 @@
 
 html {
     scroll-behavior: smooth;
+    /* smooth scroll for ios */
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 
 body {
@@ -131,15 +134,15 @@ body.dark-mode {
     top: 15%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     border-radius: .5rem;
     opacity: 0;
     border-left: 10px solid var(--first-color-second);
     -webkit-box-shadow: 2px 2px 5px 2px var(--first-color-second);
-            box-shadow: 2px 2px 5px 2px var(--first-color-second);
+    box-shadow: 2px 2px 5px 2px var(--first-color-second);
     -webkit-animation: showAlert ease forwards 1.5s 1s;
-            animation: showAlert ease forwards 1.5s 1s;
+    animation: showAlert ease forwards 1.5s 1s;
 }
 
 .noscript__alert-icon {
@@ -153,8 +156,8 @@ body.dark-mode {
     left: 20px;
     top: 50%;
     -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 .noscript__alert-message {
@@ -486,8 +489,8 @@ section {
     left: 50%;
     top: 50%;
     -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     display: inline-block;
 }
 
@@ -536,12 +539,14 @@ section {
 
 .preloader-animation {
     -webkit-animation: exit .4s ease-in forwards;
-            animation: exit .4s ease-in forwards;
+    animation: exit .4s ease-in forwards;
 }
 
 #page-wrap {
-    display: none;
-    opacity: 0;
+    /* display: none;
+    opacity: 0; */
+    display: block;
+    opacity: 1;
 }
 
 
@@ -769,7 +774,7 @@ nav {
     font-size: var(--normal);
     opacity: 0;
     -webkit-animation: scaleIn .75s ease-out .5s forwards;
-            animation: scaleIn .75s ease-out .5s forwards;
+    animation: scaleIn .75s ease-out .5s forwards;
 }
 
 .home-title span {
@@ -1986,26 +1991,26 @@ footer {
 @-webkit-keyframes showAlert {
     0% {
         -webkit-transform: translate(-50%, -150%);
-                transform: translate(-50%, -150%);
+        transform: translate(-50%, -150%);
         opacity: 0;
     }
     100% {
         opacity: 1;
         -webkit-transform: translate(-50%, -50%);
-                transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
     }
 }
 
 @keyframes showAlert {
     0% {
         -webkit-transform: translate(-50%, -150%);
-                transform: translate(-50%, -150%);
+        transform: translate(-50%, -150%);
         opacity: 0;
     }
     100% {
         opacity: 1;
         -webkit-transform: translate(-50%, -50%);
-                transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
     }
 }
 
@@ -2094,32 +2099,32 @@ footer {
 @-webkit-keyframes exit {
     0% {
         -webkit-transform: translate(-50%, -50%) scale(1);
-                transform: translate(-50%, -50%) scale(1);
+        transform: translate(-50%, -50%) scale(1);
     }
     100% {
         -webkit-transform: translate(-50%, -50%) scale(50);
-                transform: translate(-50%, -50%) scale(50);
+        transform: translate(-50%, -50%) scale(50);
     }
 }
 
 @keyframes exit {
     0% {
         -webkit-transform: translate(-50%, -50%) scale(1);
-                transform: translate(-50%, -50%) scale(1);
+        transform: translate(-50%, -50%) scale(1);
     }
     100% {
         -webkit-transform: translate(-50%, -50%) scale(50);
-                transform: translate(-50%, -50%) scale(50);
+        transform: translate(-50%, -50%) scale(50);
     }
 }
 
 @keyframes exit {
     0% {
         -webkit-transform: translate(-50%, -50%) scale(1);
-                transform: translate(-50%, -50%) scale(1);
+        transform: translate(-50%, -50%) scale(1);
     }
     100% {
         -webkit-transform: translate(-50%, -50%) scale(50);
-                transform: translate(-50%, -50%) scale(50);
+        transform: translate(-50%, -50%) scale(50);
     }
 }
